--- a/app/assets/stylesheets/mypages/edit.scss
+++ b/app/assets/stylesheets/mypages/edit.scss
@@ -16,11 +16,12 @@
     }
     &__header {
       box-sizing: border-box;
-      height: 15.6rem;
+      height: 16.6rem;
       width: 70rem;
       text-align: center;
       padding: 7.2rem 1.6rem 2.4rem;
       background-image: image-url("fmarket.jpg");
+
       &--image {
         height: 6rem;
         width: 6rem;
@@ -45,14 +46,16 @@
       }
     }
     &__textarea {
-      padding: 4rem 1.6rem;
+      padding: 4rem 1.6rem 1rem;
       &--box {
         box-sizing: border-box;
         font-size: 1.6rem;
         padding: 1rem;
         min-height: 21.6rem;
         width: 100%;
+        height: 100%;
         line-height: 1.5;
+        margin-top: 3rem;
       }
       &--edit {
         height: 5rem;
@@ -61,7 +64,7 @@
         text-align: center;
         font-size: 1.6rem;
         color: #fff;
-        margin-top: 1.6rem;
+
         line-height: 5rem;
       }
     }
