--- a/app/views/orders/done.html.haml
+++ b/app/views/orders/done.html.haml
@@ -11,7 +11,7 @@
       .buy-panel
         %p.buy-panel-title__order  購入が完了しました。
       .buy-panel-image
-        = image_tag @item.images.first.image , class: "buyed-item-image"
+        = image_tag @item.images.first.image.url , class: "buyed-item-image"
         .buy-panel-image__text 
           =@item.name
       .buy-panel-price
