商品詳細　値段横の着払いの表示変更

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -71,7 +71,8 @@
     %span.item-price-box__price
       = "¥#{@item.price.to_s(:delimited)}"
     %span.item-price-box__tax (税込)
-    %span.item-price-box__postage 着払い
+    %span.item-price-box__postage
+      = @item.delivery_fee
 
   .item-buy-btn
     - if @item.selling_status == "3"
