sns認証が本番環境では未実装というメッセージを表示

--- a/app/views/signups/index.html.haml
+++ b/app/views/signups/index.html.haml
@@ -27,5 +27,8 @@
                         %i.fab.fa-google
                         %span.login2-panel__login-form-inner--google__message
                             Googleで登録
+
+                %p.Unimplemented.message
+                    SNSでの登録は本番環境では未実装です。
         .single-footer
             = render 'signups/footer'
