--- a/app/assets/stylesheets/mypages/listings.scss
+++ b/app/assets/stylesheets/mypages/listings.scss
@@ -93,9 +93,11 @@
 
 .listings-report-areas-exsis {
   width: 70rem;
+  height: 72rem;
   background-color: #fff;
   list-style: none;
   align-items: center;
+  overflow: scroll;
 
   &__area {
     width: 70rem;
