--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -25,7 +25,7 @@
                                     .MainMenu__FavoriteItems__Body__Items__All__List__images
                                         - @like_rankings.each do |item|
                                             = link_to item_path(item.id), class: "MainMenu__FavoriteItems__Body__Items__All__List__images__image" do
-                                                - if item.selling_status == "売却済み"
+                                                - if item.selling_status == "3"
                                                     .home__sold-out-image
                                                         %span.home__sold-out-text SOLD
                                                 = image_tag item.images.first.image.url, class:'favorite-item-image'
@@ -56,7 +56,7 @@
                                                 - itemscounts += 1
                                                 %figure.MainMenu__CategoryItems__Body__Items__All__List__item
                                                     = link_to item_path(item.id) do
-                                                        - if item.selling_status == "売却済み"
+                                                        - if item.selling_status == "3"
                                                             .home__sold-out-image
                                                                 %span.home__sold-out-text SOLD
                                                         = image_tag item.images.first.image.url , class:'body-item-image'
@@ -94,7 +94,7 @@
                                                 - itemscounts += 1
                                                 %figure.MainMenu__CategoryItems__Body__Items__All__List__item
                                                     = link_to item_path(item.id) do
-                                                        - if item.selling_status == "売却済み"
+                                                        - if item.selling_status == "3"
                                                             .home__sold-out-image
                                                                 %span.home__sold-out-text SOLD
                                                         = image_tag item.images.first.image.url , class:'body-item-image'
