--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -114,7 +114,7 @@
 
 
         .Aside__Image
-            = image_tag "https://i.pinimg.com/originals/67/0c/e8/670ce89d7ce9d88121c0bf33a1d478e4.png", alt: "", class: "aside-image1", height: '200', width: '270'
+            = image_tag "https://dimg04.c-ctrip.com/images/100a0v000000jmtuu00D6_C_750_350.jpg?proc=source%2Ftrip", alt: "", class: "aside-image1", height: '200', width: '270'
 
     = render 'footer'
     = render 'postitem'
