--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -180,7 +180,7 @@ button.search-logo {
   .MainMenu {
     &__FavoriteItems {
       height: 30rem;
-      background-color: #c50028;
+      background-color: #3e568b;
       width: 100%;
       margin: auto;
 
