--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -288,7 +288,7 @@ button.search-logo {
           &__All {
             height: 30rem;
             width: 100%;
-            overflow: auto;
+            overflow: scroll;
 
             &__List {
               padding: 1rem, 1.6rem, 0, 1.6rem;
@@ -382,7 +382,7 @@ button.search-logo {
           &__All {
             height: 30rem;
             width: 100%;
-            overflow: auto;
+            overflow: scroll;
 
           
             &__List {
