--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -414,6 +414,7 @@ figcaption {
   position: absolute;
   background-color: grey;
   color: #dddddd;
+  overflow: scroll;
   text-align: center;
   line-height: margin 0 auto;
 }
