修正、商品編集画面画像プレビュー、商品更新機能

--- a/app/views/mypages/exhibit_item.html.haml
+++ b/app/views/mypages/exhibit_item.html.haml
@@ -51,7 +51,7 @@
         %tr
           %th.item-th 配送元地域
           %td.item-td
-            = @item.user.address.prefectures
+            = @item.delivery_area
         %tr
           %th.item-th 発送日の目安
           %td.item-td
