toppageビュー崩れ修正(slideshow、アイテムのfigcaption)

--- a/app/assets/stylesheets/homes/home-slidemenu.scss
+++ b/app/assets/stylesheets/homes/home-slidemenu.scss
@@ -29,7 +29,7 @@ url('https://liginc.co.jp/wp-content/uploads/2014/09/unsplash.jpg') center cente
 	overflow: hidden;
 }
 
-.slider {
+.slidertop {
 	position: relative;
 	height: 90%;
 	transform: translate3d(0, 0, 0);
